sandbox/output
GildedRose.java:11: error: cannot find symbol
            ItemStrategy itemStrategy = StrategyFactory.create(items[i].name);
                                                       ^
  symbol:   method create(String)
  location: class StrategyFactory
1 error
